--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
     </style>
   </head>
   <body>
-      <script type="importmap">
+    <script type="importmap">
 {
   "imports": {
-    "three": "https://cdn.jsdelivr.net/npm/three@v0.175.0/build/three.module.js",
-    "three/addons/": "https://cdn.jsdelivr.net/npm/three@v0.175.0/examples/jsm/"
+    "three": "https://cdn.jsdelivr.net/npm/three@0.175.0/build/three.module.js",
+    "three/addons/": "https://cdn.jsdelivr.net/npm/three@0.175.0/examples/jsm/",
+    "lil-gui": "https://cdn.jsdelivr.net/npm/lil-gui@0.19/+esm"
   }
-} 
-    <script type="module" src="src/main.js"></script>
+}
+</script>
+
   </body>
 </html>
